03_microservice_manifests/frontend/03_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/component: service
    app.kubernetes.io/owner: online-boutique
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
      app.kubernetes.io/instance: frontend
      app.kubernetes.io/component: service
      app.kubernetes.io/owner: online-boutique
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
        app.kubernetes.io/instance: frontend
        app.kubernetes.io/component: service
        app.kubernetes.io/owner: online-boutique
    spec:
    # TOPOLOGY SPREAD CONSTRAINTS - Distribute pods across nodes AND availability zones
      topologySpreadConstraints:
        # Spread across nodes (within same AZ)
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: frontend
              app.kubernetes.io/component: service
              app.kubernetes.io/instance: frontend
        
        # Spread across availability zones
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: frontend
              app.kubernetes.io/component: service
              app.kubernetes.io/instance: frontend    
      # THIS IS CRITICAL - Forces pods to run ONLY on spot nodes
      nodeSelector:
        karpenter.sh/capacity-type: spot
      serviceAccountName: frontend
      securityContext:
        fsGroup: 1000
      containers:
        - name: frontend
          securityContext:
            capabilities:
              add:
              - NET_BIND_SERVICE
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          image: 927749346049.dkr.ecr.ap-southeast-1.amazonaws.com/online-boutique/frontend:v0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /_healthz
              port: 8080
            initialDelaySeconds: 10
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 128m
              memory: 512Mi
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
