03_microservice_manifests/frontend/04_clusterip_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/component: service
    app.kubernetes.io/owner: online-boutique
spec:
  type: ClusterIP  
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/component: service
    app.kubernetes.io/owner: online-boutique
